Fixed comment textarea on narrow screens

--- a/public_html/media/css/comment-edit.css
+++ b/public_html/media/css/comment-edit.css
@@ -9,4 +9,5 @@ form.edit-comment textarea,
 form.add-comment textarea {
 	width: 50em;
 	height: 8em;
+	box-sizing: border-box;
 }
